Closed
Bug 441979
Opened 18 years ago
Closed 18 years ago
gAppData null check not required in nsXREDirProvider::GetUserDataDirectoryHome
Categories
(Toolkit :: Startup and Profile System, defect)
Tracking
()
RESOLVED
FIXED
mozilla1.9.1a2
People
(Reporter: romaxa, Assigned: romaxa)
References
Details
Attachments
(1 file)
|
1.17 KB,
patch
|
benjamin
:
review+
|
Details | Diff | Splinter Review |
./run-mozilla.sh ./TestGtkEmbed about:
...............
*** registering nsLoginManager.js: [ LoginManager ]
*** registering nsBlocklistService.js: [ Blocklist Service ]
*** Registering done.
WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file mozilla/toolkit/xre/nsXREDirProvider.cpp, line 1079
...............
Warning appears because gAppData not defined and
GetUserDataDirectoryHome return always NS_ERROR:
http://mxr.mozilla.org/seamonkey/source/toolkit/xre/nsXREDirProvider.cpp#985
Attachment #326859 -
Flags: review?(benjamin)
| Assignee | ||
Comment 1•18 years ago
|
||
I'm not sure, maybe Embedding: GRE Core is more better component for this bug?
Updated•18 years ago
|
Attachment #326859 -
Flags: review?(benjamin) → review+
Updated•18 years ago
|
Assignee: nobody → romaxa
Keywords: checkin-needed
Component: XRE Startup → Startup and Profile System
QA Contact: xre.startup → startup
Comment 2•18 years ago
|
||
<http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1217484420.1217485284.24505.gz>
{{
Linux nye Depend bloat on 2008/07/30 23:07:00
WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file /home/andrew/tbox/SeaMonkey-Debug/Linux_2.6.22.14-72.fc6_Depend/src/mozilla/toolkit/xre/nsXREDirProvider.cpp, line 1134
}}
***
checkin-needed !
Comment 3•18 years ago
|
||
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.1a2
Comment 4•18 years ago
|
||
(In reply to comment #2)
> .../toolkit/xre/nsXREDirProvider.cpp, line 1134
Different bug ... moved to bug 450898.
Keywords: assertion
You need to log in
before you can comment on or make changes to this bug.
Description
•