Bug 441979: gAppData null check not required in nsXREDirProvider::GetUserDataDirectoryHome. r=bsmedberg